--- a/Web/index.html
+++ b/Web/index.html
@@ -5,13 +5,17 @@
     <title>Página Inicial</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Selecione uma opção</h1>
+<body>  
+    <header>
+        <a href="index.html"><img class="logo" src="logo.svg" alt="Barão"></a>
+    </header>
+    <h1>Páginas Disponíveis</h1>
     <ul>
-        <li><a href="pagina1.html">Página 1</a></li>
-        <li><a href="pagina2.html">Página 2</a></li>
-        <li><a href="pagina3.html">Página 3</a></li>
+        <li><a href="top-10-serie.html">Top 10 Séries</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
     </ul>
-    <img class="logo" src="logo.svg" alt="Barão">
+    <footer>
+        <p>© 2026 Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
